k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  labels:
    app: customers
spec:
  selector:
    app: customers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
