k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customers-ingress
  labels:
    app: customers
spec:
  ingressClassName: traefik
  rules:
    - host: customers.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 80
